force-app/main/default/objects/Prism_Information__c/Prism_Information__c.object-meta.xml
<CustomObject>
    <description>Master Object to Hold the Prism Information.</description>
    <label>Prism Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Prism Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prism Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>