force-app/main/default/objects/Prism_Information__c/fields/DRA_Signatory__c.field-meta.xml
<CustomField>
    <fullName>DRA_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DRA Signatory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Prism_Information</relationshipName>
    <type>Lookup</type>
</CustomField>