force-app/main/default/objects/Prism_Information__c/fields/Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>Last_Changed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date when the information was changed in PRISM</inlineHelpText>
    <label>Last Changed</label>
    <type>Date</type>
</CustomField>