force-app/main/default/objects/Prism_Information__c/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Company</label>
    <length>120</length>
    <type>Text</type>
</CustomField>