force-app/main/default/objects/Prism_Information__c/fields/Parent_QCI__c.field-meta.xml
<CustomField>
    <fullName>Parent_QCI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent QCI</label>
    <length>3</length>
    <type>Text</type>
</CustomField>