force-app/main/default/objects/Prism_Information__c/fields/QCI__c.field-meta.xml
<CustomField>
    <fullName>QCI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QCI</label>
    <length>3</length>
    <type>Text</type>
</CustomField>