force-app/main/default/objects/Prism_Information__c/fields/Rule_Number_4_Intl__c.field-meta.xml
<CustomField>
    <fullName>Rule_Number_4_Intl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Number 4 (Intl)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>