force-app/main/default/objects/Prism_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_ID__c</columns>
    <columns>QCI__c</columns>
    <columns>Account_Code__c</columns>
    <columns>Rule_Number_Dom__c</columns>
    <columns>Rule_Number_Intl__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>